<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:background="#171717"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <com.polluxlab.banglamusic.helper.MyTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="25sp"
      android:gravity="center"
      android:textColor="#fff"
      android:text="@string/buy_now_text"/>
    <com.polluxlab.banglamusic.helper.MyTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="35sp"
      android:gravity="center"
      android:textColor="#fff"
      android:textStyle="bold"
      android:padding="10dp"
      android:text="@string/buy_now_text2"/>
    <com.polluxlab.banglamusic.helper.MyButton
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:text="@string/string_buy"
      android:textStyle="normal"
      android:background="@drawable/buy_now"
      android:textSize="25sp"
      android:padding="10dp"
      android:textColor="#000"
      android:id="@+id/buyNowBtn"
      android:onClick="btnClicked"
      android:layout_marginTop="50dp"
      android:layout_gravity="center_horizontal"/>
</LinearLayout>