<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/carouselFrag"
              android:orientation="vertical"
              android:background="@android:color/transparent"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_weight="1">
        <android.support.v4.view.ViewPager
          android:id="@+id/vp_pages"
          android:layout_width="match_parent"
          android:layout_height="match_parent"/>
        <FrameLayout
          android:id="@+id/playerLayout"
          android:visibility="invisible"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:background="@android:color/transparent">
            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
                <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@android:color/transparent">
                    <Button
                      android:id="@+id/playerUiClose"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:background="#000"
                      android:minHeight="0dp"
                      android:minWidth="0dp"
                      android:text="X"
                      android:paddingLeft="15dp"
                      android:paddingRight="15dp"
                      android:textSize="17sp"
                      android:textColor="#fff"
                      android:layout_alignParentRight="true"/>
                </RelativeLayout>

                <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="#000000"
                  android:gravity="center"
                  android:orientation="horizontal">
                    <ImageView
                      android:id="@+id/playerUiImage"
                      android:layout_width="50dp"
                      android:layout_margin="10dp"
                      android:adjustViewBounds="true"
                      android:layout_height="wrap_content"
                      android:src="@drawable/pic_test_3"/>

                    <LinearLayout
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:gravity="center_vertical"
                      android:padding="5dp">

                        <com.polluxlab.banglamusic.helper.MyTextView
                          android:id="@+id/playerUiName"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="#fff"
                          android:textSize="15sp"
                          android:maxLines="1"
                          android:text="@string/dami_text1"/>

                        <com.polluxlab.banglamusic.helper.MyTextView
                          android:id="@+id/playerUiArtist"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="#fff"
                          android:textSize="12sp"
                          android:maxLines="1"
                          android:text="@string/dami_text2"/>
                    </LinearLayout>

                    <ImageButton
                      android:id="@+id/prevBtn"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:background="@android:color/transparent"
                      android:src="@drawable/ic_prev"/>

                    <ImageButton
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:background="@android:color/transparent"
                      android:padding="4dp"
                      android:id="@+id/pauseBtn"
                      android:src="@drawable/ic_pause"/>

                    <ImageButton
                      android:id="@+id/nextBtn"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:background="@android:color/transparent"
                      android:layout_marginRight="5dp"
                      android:src="@drawable/ic_next"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#282828"
      android:padding="2dp"
      >
        <Button
          android:id="@+id/mainFreeBtn"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:layout_weight="1"
          android:background="@drawable/select_btn1"
          android:textColor="#000"
          android:layout_marginRight="5dp"
          android:textSize="20sp"
          android:textStyle="bold"
          android:text="@string/free_category_title"/>

        <Button
          android:id="@+id/mainPremBtn"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:layout_weight="1"
          android:background="@drawable/select_btn2_deactive"
          android:textColor="#000"
          android:textSize="20sp"
          android:textStyle="bold"
          android:layout_marginRight="5dp"
          android:text="@string/string_prem"/>

        <Button
          android:id="@+id/mainAccBtn"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:layout_weight="1"
          android:background="@drawable/select_btn3_deactive"
          android:textColor="#000"
          android:textSize="20sp"
          android:textStyle="bold"
          android:text="@string/string_set"/>
    </LinearLayout>
</LinearLayout>