<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:orientation="vertical"
      android:background="#43C26B"
      android:layout_weight="2"
      android:gravity="center"
      android:id="@+id/account_status_container"
      android:visibility="gone">

        <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:visibility="visible"
          >

            <com.polluxlab.banglamusic.helper.MyTextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="৫ "
              android:textColor="#fff"
              android:gravity="center_horizontal"
              android:textSize="40sp"
              android:id="@+id/account_remainning_days"/>

            <com.polluxlab.banglamusic.helper.MyTextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/string_dayrest"
              android:textColor="#fff"
              android:textSize="25sp"/>
        </LinearLayout>

        <com.polluxlab.banglamusic.helper.MyTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="আপনার মেয়াদ শেষ হবে"
          android:textColor="#fff"
          android:gravity="center_horizontal"
          android:textSize="25sp"/>
        <com.polluxlab.banglamusic.helper.MyTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="৫ ডিসেম্বর ২০১৪"
          android:textColor="#fff"
          android:gravity="center_horizontal"
          android:textSize="30sp"
          android:id="@+id/account_last_date"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:background="#43C26B"
      android:gravity="center"
      android:orientation="vertical"
      android:visibility="visible"
      android:layout_weight="2"
      android:id="@+id/account_buy_container">

        <com.polluxlab.banglamusic.helper.MyTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/string_st1"
          android:textSize="20sp"
          android:textColor="#fff"
          />

        <com.polluxlab.banglamusic.helper.MyTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/string_st2"
          android:textSize="20sp"
          android:textColor="#fff"
          />

        <com.polluxlab.banglamusic.helper.MyTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/string_pkg1"
          android:textSize="25sp"

          />

        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/string_buy"
          android:id="@+id/account_buy_btn"
          android:background="@drawable/buy_now"
          android:layout_margin="15dp"
          android:textSize="25sp"
          android:paddingLeft="25dp"
          android:paddingRight="25dp"
          android:textStyle="normal"
          android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="3"
      android:gravity="center"
      android:visibility="visible"
      android:orientation="vertical">
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:visibility="gone"
          android:id="@+id/logOutLayout"
          android:padding="10dp">
            <ImageView
              android:layout_width="50dp"
              android:layout_height="wrap_content"
              android:paddingRight="10dp"
              android:adjustViewBounds="true"
              android:src="@drawable/person"/>
            <com.polluxlab.banglamusic.helper.MyTextView
              android:id="@+id/accountPhoneNumber"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:text="১২৩৪৫৬৭৮৯০"/>
            <com.polluxlab.banglamusic.helper.MyButton
              android:id="@+id/accountExitButton"
              android:layout_width="80dp"
              android:layout_height="35dp"
              android:background="#FA4A4C"
              android:textColor="#fff"
              android:text="বাহির"/>
        </LinearLayout>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#ddd"></LinearLayout>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:padding="10dp">
            <ImageView
              android:layout_width="50dp"
              android:layout_height="wrap_content"
              android:paddingRight="10dp"
              android:adjustViewBounds="true"
              android:src="@drawable/call_btn"/>
            <com.polluxlab.banglamusic.helper.MyTextView
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:text="গ্রাহক সেবা"/>
            <com.polluxlab.banglamusic.helper.MyButton
              android:id="@+id/helpLineBtn"
              android:layout_width="80dp"
              android:layout_height="35dp"
              android:background="#FA4A4C"
              android:textColor="#fff"
              android:text="কল"/>
        </LinearLayout>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#ddd"></LinearLayout>
        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:layout_weight="1"></LinearLayout>
        <ImageView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:src="@drawable/footer_ic"
          android:visibility="visible"
          android:padding="2dp"
          android:adjustViewBounds="true"/>
        <com.polluxlab.banglamusic.helper.MyTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="14sp"
          android:layout_marginBottom="2dp"
          android:text="ভার্সন ১.০"/>
    </LinearLayout>


</LinearLayout>